--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView android:text="Titres Likés" android:layout_marginTop="20dp" android:textSize="20sp"  android:layout_height="match_parent" android:layout_width="match_parent"/>
+        <TextView android:text="Titres Likés" android:layout_marginLeft="15dp" android:layout_marginTop="20dp" android:textSize="20sp"  android:layout_height="match_parent" android:layout_width="match_parent"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/liked_recycler_view"
