--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#8ba0d1"
+        android:background="#30000000"
         app:backgroundTint="@null"
         app:menu="@menu/bottom_nav_menu" />
 </RelativeLayout>
