--- a/app/src/main/res/color/button_selector_active.xml
+++ b/app/src/main/res/color/button_selector_active.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="#A9A9A9" /> <!-- Gris foncé -->
+    <item android:color="#4CAF50" /> <!-- Gris foncé -->
 </selector>
