--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,8 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.FSpotify" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+<resources>
+    <style name="Theme.FSpotify" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Couleur principale -->
+        <item name="colorPrimary">#4CAF50</item> <!-- Remplacez par votre couleur -->
+        <item name="colorPrimaryVariant">#379B3B</item> <!-- Variante -->
+        <item name="colorOnPrimary">#FFFFFF</item> <!-- Couleur du texte sur la topbar -->
     </style>
 </resources>
