Queue Tellement amélioré
Mec c'est une folie

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/nav_queue"
         android:icon="@drawable/queue_music"
-        android:title="Titres" />
+        android:title="File d'attente" />
     <item
         android:id="@+id/nav_library"
         android:icon="@drawable/library_books"
