--- a/app/src/main/res/layout/item_queue_song.xml
+++ b/app/src/main/res/layout/item_queue_song.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/song_card"
+    android:id="@+id/song_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="2dp">
+    android:orientation="vertical"
+    android:background="@drawable/song_item_background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,4 +50,4 @@
             android:src="@android:drawable/ic_menu_sort_by_size"
             android:contentDescription="Drag to reorder" />
     </LinearLayout>
-</com.google.android.material.card.MaterialCardView>
+</LinearLayout>
