--- a/app/src/main/res/drawable/song_item_background.xml
+++ b/app/src/main/res/drawable/song_item_background.xml
@@ -9,9 +9,9 @@
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF" />
+            <solid android:color="#AA4D4848" />
             <corners android:radius="8dp" />
-            <stroke android:width="1dp" android:color="#DDDDDD" />
+            <stroke android:width="1dp" android:color="#AA575151" />
         </shape>
     </item>
 </selector>
