--- a/app/src/main/res/layout/item_liked_song.xml
+++ b/app/src/main/res/layout/item_liked_song.xml
@@ -22,18 +22,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:textColor="@color/white"/>
 
         <TextView
             android:id="@+id/item_artist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:textColor="@color/white"/>
 
         <TextView
             android:id="@+id/item_duration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:textColor="@color/white"/>
     </LinearLayout>
 </LinearLayout>
