--- a/app/src/main/res/layout/item_queue_song.xml
+++ b/app/src/main/res/layout/item_queue_song.xml
@@ -33,21 +33,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textColor="@color/white"/>
 
             <TextView
                 android:id="@+id/item_artist"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:textColor="@color/white"/>
         </LinearLayout>
 
         <ImageView
             android:id="@+id/drag_handle"
-            android:layout_width="24dp"
+            android:layout_width="32dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:src="@android:drawable/ic_menu_sort_by_size"
+            android:src="@drawable/drag_handle"
             android:contentDescription="Drag to reorder" />
     </LinearLayout>
 </LinearLayout>
